[tool.poetry]
name = "pythonproject-pytest"
version = "0.1.0"
description = ""
authors = ["Vitaly Polyakov <vit.polyakov71@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
